--- a/index.html
+++ b/index.html
@@ -5,19 +5,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>【帕妃雯】歡慶媽媽節|現賺2240元</title>
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@600&display=swap" rel="stylesheet">
-    <script src="js/aos.js"></script>
+
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/jquery-3.5.1.min.js"></script>
+    <!-- Google Tag Manager -->
+    <script>
+        (function(w, d, s, l, i) {
+            w[l] = w[l] || [];
+            w[l].push({
+                'gtm.start': new Date().getTime(),
+                event: 'gtm.js'
+            });
+            var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s),
+                dl = l != 'dataLayer' ? '&l=' + l : '';
+            j.async = true;
+            j.src =
+                'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+            f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-K9NGXZR');
+    </script>
+    <!-- End Google Tag Manager -->
 
+    <!-- ※LP用|編集削除禁止 -->
+    <link href="https://www.perfectone.tw/VCommonFiles/css/app.css" rel=stylesheet>
+    <!-- ※LP用|編集削除禁止※ -->
+
+    <script type="text/javascript" charset="utf-8" src="https://cdn.penglue.jp/clients/1976d6ab-fc3e-4b03-bc7f-0e3d17e03ec6/public/click/click.js"></script>
 </head>
 
+
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K9NGXZR"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
     <div class="wrap">
         <div class="content">
             <img src="img/mom_01.jpg" alt="">
@@ -44,19 +73,19 @@
             <img src="img/mom_04.jpg" alt="">
 
             <div class="choice">
-                <a href="#alloffer" class="scroll">
+                <a href="#alloffer" class="scroll choice_btn">
                     <div>
                         <img src="img/mom_05.jpg" alt="">
                         <img src="img/click.png" alt="" class="finger animate__animated animate__pulse animate__infinite">
                     </div>
                 </a>
-                <a href="#alloffer" class="scroll">
+                <a href="#alloffer" class="scroll choice_btn choice_center">
                     <div>
                         <img src="img/mom_06.jpg" alt="">
                         <img src="img/click.png" alt="" class="finger animate__animated animate__pulse animate__infinite">
                     </div>
                 </a>
-                <a href="#alloffer" class="scroll">
+                <a href="#alloffer" class="scroll choice_btn">
                     <div>
                         <img src="img/mom_07.jpg" alt="">
                         <img src="img/click.png" alt="" class="finger animate__animated animate__pulse animate__infinite">
@@ -71,26 +100,36 @@
             <img src="img/mom_09.jpg" alt="" id="alloffer">
             <div class="offer_btn">
                 <img src="img/mom_10.jpg" alt="">
-                <img src="img/offer_01.png" alt="" class="btn_front">
+                <div class="light"></div>
+                <a href="#lp_form" onclick="acsSelect('MD2104A-3');" class="scroll"><img src="img/offer_01.png" alt="" class="btn_front"></a>
             </div>
+
             <img src="img/mom_11.jpg" alt="">
             <div class="offer_btn">
                 <img src="img/mom_12.jpg" alt="">
-                <img src="img/offer_02.png" alt="" class="btn_front">
+                <div class="light"></div>
+                <a href="#lp_form" onclick="acsSelect('MD2104A-2');" class="scroll"><img src="img/offer_02.png" alt="" class="btn_front"></a>
             </div>
             <img src="img/mom_13.jpg" alt="">
             <div class="offer_btn">
                 <img src="img/mom_14.jpg" alt="">
-                <img src="img/offer_03.png" alt="" class="btn_front">
+                <a href="#lp_form" onclick="acsSelect('SHI029-T');" class="scroll"><img src="img/offer_03.png" alt="" class="btn_last"></a>
             </div>
             <img src="img/mom_15.jpg" alt="">
         </div>
     </div>
+    <script src="js/aos.js"></script>
     <script src="js/all.js"></script>
     <script src="js/scroll.js"></script>
     <script>
         AOS.init();
     </script>
+
+    <!-- ※LP用|編集削除禁止 -->
+    <div id="acs_lp_form"></div>
+    <script src="https://www.perfectone.tw/VCommonFiles/app.min.js"></script>
+    <!-- ※LP用|編集削除禁止 -->
 </body>
+
 
 </html>
